// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu closableSideVue demo works fine 1`] = `
<div
  class="t-default-menu t-menu--light t-is-collapsed"
  height="550px"
  style="height: 100%; width: 64px;"
>
  <div
    class="t-default-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <span>
        LOGO
      </span>
      
    </div>
    <ul
      class="t-menu narrow-scrollbar"
    >
      
      <li
        class="t-menu__item"
      >
        
        <svg
          class="t-icon t-icon-dashboard"
        >
          <use
            href="#t-icon-dashboard"
          />
        </svg>
        
        <span
          class="t-menu__content"
        >
          
           仪表盘1 
          
        </span>
      </li>
      <li
        class="t-submenu"
        mode="popup"
      >
        <div
          class="t-popup__reference"
        >
          <transition-stub>
            <div
              aria-hidden="true"
              class="t-popup"
              role="tooltip"
              style="display: none;"
            >
              <div
                class="t-popup__content t-menu__popup t-is-vertical t-menu__spacer t-menu__spacer--left"
              >
                
                <ul
                  class="t-menu__popup-wrapper"
                >
                  
                  <li
                    class="t-menu__item t-is-active t-menu__item--plain t-submenu__item"
                  >
                    <!---->
                    <span
                      class="t-menu__content"
                    >
                      
                       菜单内容一 
                      
                    </span>
                  </li>
                  <li
                    class="t-menu__item t-menu__item--plain t-submenu__item"
                  >
                    <!---->
                    <span
                      class="t-menu__content"
                    >
                      
                       菜单内容二 
                      
                    </span>
                  </li>
                  <li
                    class="t-menu__item t-menu__item--plain t-submenu__item"
                  >
                    <!---->
                    <span
                      class="t-menu__content"
                    >
                      
                       菜单内容三 
                      
                    </span>
                  </li>
                  
                </ul>
                
                <!---->
              </div>
            </div>
          </transition-stub>
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
          >
            
            
            <svg
              class="t-icon t-icon-mail"
            >
              <use
                href="#t-icon-mail"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              
              <span>
                信息区
              </span>
              
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              style="transform: rotate(0deg); margin-left: auto;"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
            
          </div>
          
        </div>
      </li>
      <li
        class="t-menu__item"
      >
        
        <svg
          class="t-icon t-icon-play-circle"
        >
          <use
            href="#t-icon-play-circle"
          />
        </svg>
        
        <span
          class="t-menu__content"
        >
          
           视频区 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled"
      >
        
        <svg
          class="t-icon t-icon-edit-1"
        >
          <use
            href="#t-icon-edit-1"
          />
        </svg>
        
        <span
          class="t-menu__content"
        >
          
           资源编辑 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <svg
        class="t-icon t-icon-chevron-right t-menu__operations-icon"
      >
        <use
          href="#t-icon-chevron-right"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Menu Menu customHeaderVue demo works fine 1`] = `
<div
  class="t-menu t-head-menu t-menu--dark"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容一 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           已选内容 
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容二 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容三 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <div
        class="demo-box"
      >
        自定义内容区域
      </div>
      
    </div>
  </div>
  <!---->
</div>
`;

exports[`Menu Menu customSideVue demo works fine 1`] = `
<div
  class="t-default-menu t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        src="https://www.tencent.com/img/index/menu_logo_hover.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          禁用菜单
          
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Menu Menu doubleVue demo works fine 1`] = `
<div
  class="box"
>
  <div
    class="t-menu t-head-menu t-menu--light"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-submenu t-is-opened"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom t-is-opened"
          >
            
            <span>
              菜单1
            </span>
            
          </div>
          <ul
            style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
          >
            
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-1
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-2
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-3
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-submenu"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
          >
            
            <span>
              菜单2
            </span>
            
          </div>
          <ul
            style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
          >
            
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-1
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-2
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-3
                
              </span>
            </li>
            
          </ul>
          
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-menu t-head-menu t-menu--dark"
    style="margin-top: 24px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-submenu t-is-opened"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom t-is-opened"
          >
            
            <span>
              菜单1
            </span>
            
          </div>
          <ul
            style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
          >
            
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-1
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-2
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单1-3
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-submenu"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
          >
            
            <span>
              菜单2
            </span>
            
          </div>
          <ul
            style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
          >
            
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-1
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-2
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                子菜单2-3
                
              </span>
            </li>
            
          </ul>
          
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Menu Menu groupSideVue demo works fine 1`] = `
<div
  class="t-default-menu t-menu--light t-is-collapsed"
  height="550px"
  style="height: 100%; width: 64px;"
>
  <div
    class="t-default-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        src="https://www.tencent.com/img/index/menu_logo_hover.png"
        width="35"
      />
      
    </div>
    <ul
      class="t-menu narrow-scrollbar"
    >
      
      <div
        class="t-menu-group"
      >
        <div
          class="t-menu-group__title"
        >
          Classification A
        </div>
        
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-dashboard"
          >
            <use
              href="#t-icon-dashboard"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             仪表盘 
            
          </span>
        </li>
        
      </div>
      <div
        class="t-menu-group"
      >
        <div
          class="t-menu-group__title"
        >
          Classification B
        </div>
        
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             调度平台 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             菜单内容二很长很长很长很长很长很长很长很长 
            
          </span>
        </li>
        
      </div>
      <div
        class="t-menu-group"
      >
        <div
          class="t-menu-group__title"
        >
          Classification C
        </div>
        
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             精准监控 
            
          </span>
        </li>
        
      </div>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <svg
        class="t-icon t-icon-view-list t-menu__operations-icon"
      >
        <use
          href="#t-icon-view-list"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Menu Menu headMenuDarkVue demo works fine 1`] = `
<div
  class="t-menu t-head-menu t-menu--dark"
>
  <div
    class="t-head-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        class="t-menu__logo--center"
        src="https://www.tencent.com/img/index/menu_logo.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu"
    >
      
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           已选内容 
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容一 
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容二 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容三 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-search t-menu__operations-icon"
        >
          <use
            href="#t-icon-search"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-mail t-menu__operations-icon"
        >
          <use
            href="#t-icon-mail"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-user t-menu__operations-icon"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-ellipsis t-menu__operations-icon"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
      </a>
      
    </div>
  </div>
  <!---->
</div>
`;

exports[`Menu Menu headMenuEmptyVue demo works fine 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容一 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           已选内容 
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容二 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容三 
          
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Menu Menu headMenuModeTileVue demo works fine 1`] = `
<div
  class="t-menu t-head-menu t-menu--dark"
>
  <div
    class="t-head-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        class="t-menu__logo--center"
        src="https://www.tencent.com/img/index/menu_logo_hover.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu"
    >
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容一 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           已选内容 
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容二 
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单内容三 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-search t-menu__operations-icon"
        >
          <use
            href="#t-icon-search"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-mail t-menu__operations-icon"
        >
          <use
            href="#t-icon-mail"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-user t-menu__operations-icon"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-ellipsis t-menu__operations-icon"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
      </a>
      
    </div>
  </div>
  <!---->
</div>
`;

exports[`Menu Menu headMenuTileVue demo works fine 1`] = `
<div
  class="t-menu t-head-menu t-menu--dark"
>
  <div
    class="t-head-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        class="t-menu__logo--center"
        src="https://www.tencent.com/img/index/menu_logo.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu"
    >
      
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单1 
          <li
            class="t-submenu"
          >
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              <!---->
            </div>
            <ul
              style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
            >
              
              
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单1-1
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单1-2
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单1-3
                  
                </span>
              </li>
              
              
            </ul>
            
          </li>
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单2 
          <li
            class="t-submenu"
          >
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              <!---->
            </div>
            <ul
              style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
            >
              
              
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单2-1
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单2-2
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单2-3
                  
                </span>
              </li>
              
              
            </ul>
            
          </li>
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单3 
          <li
            class="t-submenu"
          >
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              <!---->
            </div>
            <ul
              style="opacity: 0; width: 0px; height: 0px; overflow: hidden;"
            >
              
              
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单3-1
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单3-2
                  
                </span>
              </li>
              <li
                class="t-menu__item t-menu__item--plain"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  
                  子菜单3-3
                  
                </span>
              </li>
              
              
            </ul>
            
          </li>
          
        </span>
      </li>
      
      <li
        class="t-menu__item t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
           菜单4 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-search t-menu__operations-icon"
        >
          <use
            href="#t-icon-search"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-mail t-menu__operations-icon"
        >
          <use
            href="#t-icon-mail"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-user t-menu__operations-icon"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
      </a>
      <a
        href="javascript:;"
      >
        <svg
          class="t-icon t-icon-ellipsis t-menu__operations-icon"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
      </a>
      
    </div>
  </div>
  <!---->
</div>
`;

exports[`Menu Menu multiSideVue demo works fine 1`] = `
<div
  class="box"
>
  <div
    class="t-default-menu t-menu--light"
    height="550px"
    style="height: 100%; width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <!---->
      <ul
        class="t-menu t-menu--scroll narrow-scrollbar"
      >
        
        <li
          class="t-submenu t-is-opened"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right t-is-opened"
          >
            
            <svg
              class="t-icon t-icon-mail"
            >
              <use
                href="#t-icon-mail"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              
              <span>
                消息区
              </span>
              
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              style="transform: rotate(0deg);"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub t-is-opened"
            style="--padding-left: 44px;"
          >
            
            <li
              class="t-submenu"
            >
              
              <div
                class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  二级菜单
                </span>
                <svg
                  class="t-fake-arrow"
                  fill="none"
                  height="16"
                  style="transform: rotate(0deg);"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </div>
              <ul
                class="t-menu__sub"
                style="--padding-left: 60px;"
              >
                
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                
              </ul>
              
            </li>
            <li
              class="t-submenu"
            >
              
              <div
                class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
              >
                <!---->
                <span
                  class="t-menu__content"
                >
                  二级菜单
                </span>
                <svg
                  class="t-fake-arrow"
                  fill="none"
                  height="16"
                  style="transform: rotate(0deg);"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
              </div>
              <ul
                class="t-menu__sub"
                style="--padding-left: 60px;"
              >
                
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                <li
                  class="t-menu__item t-menu__item--plain t-submenu__item"
                >
                  <!---->
                  <span
                    class="t-menu__content"
                  >
                    
                     三级菜单内容 
                    
                  </span>
                </li>
                
              </ul>
              
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-user-circle"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             个人中心 
            
          </span>
        </li>
        <li
          class="t-submenu"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
          >
            
            <svg
              class="t-icon t-icon-play-circle"
            >
              <use
                href="#t-icon-play-circle"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              
              <span>
                视频区
              </span>
              
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              style="transform: rotate(0deg);"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="--padding-left: 44px;"
          >
            
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-edit-1"
          >
            <use
              href="#t-icon-edit-1"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源编辑 
            
          </span>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
        >
          <use
            href="#t-icon-view-list"
          />
        </svg>
        
      </div>
    </div>
  </div>
  <div
    class="t-default-menu t-menu--dark"
    height="550px"
    style="height: 100%; width: 232px; margin-left: 50px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <!---->
      <ul
        class="t-menu t-menu--scroll narrow-scrollbar"
      >
        
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-dashboard"
          >
            <use
              href="#t-icon-dashboard"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             仪表盘 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-server"
          >
            <use
              href="#t-icon-server"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源列表 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-root-list"
          >
            <use
              href="#t-icon-root-list"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             根目录 
            
          </span>
        </li>
        <li
          class="t-submenu t-is-opened"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right t-is-opened"
          >
            
            <svg
              class="t-icon t-icon-control-platform"
            >
              <use
                href="#t-icon-control-platform"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              
              <span>
                调度平台
              </span>
              
            </span>
            <svg
              class="t-fake-arrow t-fake-arrow--active"
              fill="none"
              height="16"
              style="transform: rotate(0deg);"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub t-is-opened"
            style="--padding-left: 44px;"
          >
            
            <li
              class="t-menu__item t-is-active t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-precise-monitor"
          >
            <use
              href="#t-icon-precise-monitor"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             精准监控 
            
          </span>
        </li>
        <li
          class="t-submenu t-is-disabled"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right t-is-disabled"
          >
            
            <svg
              class="t-icon t-icon-mail"
            >
              <use
                href="#t-icon-mail"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              消息区
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              style="transform: rotate(0deg);"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="--padding-left: 44px;"
          >
            
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-user-circle"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             个人中心 
            
          </span>
        </li>
        <li
          class="t-submenu"
        >
          
          <div
            class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
          >
            
            <svg
              class="t-icon t-icon-play-circle"
            >
              <use
                href="#t-icon-play-circle"
              />
            </svg>
            
            <span
              class="t-menu__content"
            >
              
              <span>
                视频区
              </span>
              
            </span>
            <svg
              class="t-fake-arrow"
              fill="none"
              height="16"
              style="transform: rotate(0deg);"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
          <ul
            class="t-menu__sub"
            style="--padding-left: 44px;"
          >
            
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain t-submenu__item"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 二级菜单内容 
                
              </span>
            </li>
            
          </ul>
          
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-edit-1"
          >
            <use
              href="#t-icon-edit-1"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源编辑 
            
          </span>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <svg
          class="t-icon t-icon-view-list t-menu__operations-icon"
        >
          <use
            href="#t-icon-view-list"
          />
        </svg>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Menu multipleVue demo works fine 1`] = `
<div
  class="box"
>
  <div
    class="t-menu t-head-menu t-menu--light"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-submenu"
        >
          <div
            class="t-popup__reference"
          >
            <transition-stub>
              <div
                aria-hidden="true"
                class="t-popup"
                role="tooltip"
                style="display: none;"
              >
                <div
                  class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                >
                  
                  <ul
                    class="t-menu__popup-wrapper"
                  >
                    
                    <li
                      class="t-submenu"
                    >
                      <div
                        class="t-popup__reference"
                      >
                        <transition-stub>
                          <div
                            aria-hidden="true"
                            class="t-popup"
                            role="tooltip"
                            style="display: none;"
                          >
                            <div
                              class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                            >
                              
                              <ul
                                class="t-menu__popup-wrapper"
                              >
                                
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-1-1 
                                    
                                  </span>
                                </li>
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-1-2 
                                    
                                  </span>
                                </li>
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-1-3 
                                    
                                  </span>
                                </li>
                                
                              </ul>
                              
                              <!---->
                            </div>
                          </div>
                        </transition-stub>
                        
                        <div
                          class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
                        >
                          
                          子菜单1-1
                          <svg
                            class="t-fake-arrow"
                            fill="none"
                            height="16"
                            style="transform: rotate(0deg);"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                              stroke="black"
                              stroke-opacity="0.9"
                              stroke-width="1.3"
                            />
                          </svg>
                          
                        </div>
                        
                      </div>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-2 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-3 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-4 
                        
                      </span>
                    </li>
                    <li
                      class="t-submenu"
                    >
                      <div
                        class="t-popup__reference"
                      >
                        <transition-stub>
                          <div
                            aria-hidden="true"
                            class="t-popup"
                            role="tooltip"
                            style="display: none;"
                          >
                            <div
                              class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                            >
                              
                              <ul
                                class="t-menu__popup-wrapper"
                              >
                                
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-5-1 
                                    
                                  </span>
                                </li>
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-5-2 
                                    
                                  </span>
                                </li>
                                <li
                                  class="t-menu__item t-menu__item--plain"
                                >
                                  <!---->
                                  <span
                                    class="t-menu__content"
                                  >
                                    
                                     子菜单1-5-3 
                                    
                                  </span>
                                </li>
                                
                              </ul>
                              
                              <!---->
                            </div>
                          </div>
                        </transition-stub>
                        
                        <div
                          class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
                        >
                          
                          子菜单1-5
                          <svg
                            class="t-fake-arrow"
                            fill="none"
                            height="16"
                            style="transform: rotate(0deg);"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                              stroke="black"
                              stroke-opacity="0.9"
                              stroke-width="1.3"
                            />
                          </svg>
                          
                        </div>
                        
                      </div>
                    </li>
                    
                  </ul>
                  
                  <!---->
                </div>
              </div>
            </transition-stub>
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              
              
              <span>
                菜单1
              </span>
              
              <svg
                class="t-fake-arrow"
                fill="none"
                height="16"
                style="transform: rotate(0deg);"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                  stroke="black"
                  stroke-opacity="0.9"
                  stroke-width="1.3"
                />
              </svg>
              
            </div>
            
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-popup__reference"
          >
            <transition-stub>
              <div
                aria-hidden="true"
                class="t-popup"
                role="tooltip"
                style="display: none;"
              >
                <div
                  class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                >
                  
                  <ul
                    class="t-menu__popup-wrapper"
                  >
                    
                    <li
                      class="t-menu__item t-is-active t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-1 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-2 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-3 
                        
                      </span>
                    </li>
                    
                  </ul>
                  
                  <!---->
                </div>
              </div>
            </transition-stub>
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              
              菜单2
              <svg
                class="t-fake-arrow"
                fill="none"
                height="16"
                style="transform: rotate(0deg);"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                  stroke="black"
                  stroke-opacity="0.9"
                  stroke-width="1.3"
                />
              </svg>
              
            </div>
            
          </div>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-menu t-head-menu t-menu--dark"
    style="margin-top: 24px;"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-submenu"
        >
          <div
            class="t-popup__reference"
          >
            <transition-stub>
              <div
                aria-hidden="true"
                class="t-popup"
                role="tooltip"
                style="display: none;"
              >
                <div
                  class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                >
                  
                  <ul
                    class="t-menu__popup-wrapper"
                  >
                    
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-1 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-2 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单1-3 
                        
                      </span>
                    </li>
                    
                  </ul>
                  
                  <!---->
                </div>
              </div>
            </transition-stub>
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              
              
              <span>
                菜单1
              </span>
              
              <svg
                class="t-fake-arrow"
                fill="none"
                height="16"
                style="transform: rotate(0deg);"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                  stroke="black"
                  stroke-opacity="0.9"
                  stroke-width="1.3"
                />
              </svg>
              
            </div>
            
          </div>
        </li>
        <li
          class="t-submenu"
        >
          <div
            class="t-popup__reference"
          >
            <transition-stub>
              <div
                aria-hidden="true"
                class="t-popup"
                role="tooltip"
                style="display: none;"
              >
                <div
                  class="t-popup__content t-menu__popup t-is-horizontal t-menu__spacer t-menu__spacer--top"
                >
                  
                  <ul
                    class="t-menu__popup-wrapper"
                  >
                    
                    <li
                      class="t-menu__item t-is-active t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-1 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-2 
                        
                      </span>
                    </li>
                    <li
                      class="t-menu__item t-menu__item--plain"
                    >
                      <!---->
                      <span
                        class="t-menu__content"
                      >
                        
                         子菜单2-3 
                        
                      </span>
                    </li>
                    
                  </ul>
                  
                  <!---->
                </div>
              </div>
            </transition-stub>
            
            <div
              class="t-menu__item t-menu__item-spacer t-menu__item-spacer--bottom"
            >
              
              
              <span>
                菜单2
              </span>
              
              <svg
                class="t-fake-arrow"
                fill="none"
                height="16"
                style="transform: rotate(0deg);"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                  stroke="black"
                  stroke-opacity="0.9"
                  stroke-width="1.3"
                />
              </svg>
              
            </div>
            
          </div>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Menu Menu popupSideVue demo works fine 1`] = `
<div
  class="t-default-menu t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        src="https://www.tencent.com/img/index/menu_logo_hover.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item"
      >
        
        <svg
          class="t-icon t-icon-dashboard"
        >
          <use
            href="#t-icon-dashboard"
          />
        </svg>
        
        <span
          class="t-menu__content"
        >
          
           仪表盘 
          
        </span>
      </li>
      <li
        class="t-submenu t-is-opened"
      >
        
        <div
          class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right t-is-opened"
        >
          
          <svg
            class="t-icon t-icon-user-circle"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
            <span>
              个人中心
            </span>
            
          </span>
          <svg
            class="t-fake-arrow t-fake-arrow--active"
            fill="none"
            height="16"
            style="transform: rotate(0deg);"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </div>
        <ul
          class="t-menu__sub t-is-opened"
          style="--padding-left: 44px;"
        >
          
          <li
            class="t-menu__item t-is-active t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容一 
              
            </span>
          </li>
          <li
            class="t-menu__item t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容二 
              
            </span>
          </li>
          <li
            class="t-menu__item t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容三 
              
            </span>
          </li>
          
        </ul>
        
      </li>
      <li
        class="t-submenu"
      >
        
        <div
          class="t-menu__item t-menu__item-spacer t-menu__item-spacer--right"
        >
          
          <svg
            class="t-icon t-icon-root-list"
          >
            <use
              href="#t-icon-root-list"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
            <span>
              根目录
            </span>
            
          </span>
          <svg
            class="t-fake-arrow"
            fill="none"
            height="16"
            style="transform: rotate(0deg);"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </div>
        <ul
          class="t-menu__sub"
          style="--padding-left: 44px;"
        >
          
          <li
            class="t-menu__item t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容一 
              
            </span>
          </li>
          <li
            class="t-menu__item t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容二 
              
            </span>
          </li>
          <li
            class="t-menu__item t-menu__item--plain t-submenu__item"
          >
            <!---->
            <span
              class="t-menu__content"
            >
              
               子菜单内容三 
              
            </span>
          </li>
          
        </ul>
        
      </li>
      <li
        class="t-menu__item t-is-disabled"
      >
        
        <svg
          class="t-icon t-icon-server"
        >
          <use
            href="#t-icon-server"
          />
        </svg>
        
        <span
          class="t-menu__content"
        >
          
           资源列表 
          
        </span>
      </li>
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <svg
        class="t-icon t-icon-view-list t-menu__operations-icon"
      >
        <use
          href="#t-icon-view-list"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Menu Menu sideMenuWidthVue demo works fine 1`] = `
<div
  class="t-default-menu t-menu--light"
  height="550px"
  style="height: 100%; width: 200px;"
>
  <div
    class="t-default-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <img
        alt="logo"
        class="t-menu__logo--center"
        src="https://www.tencent.com/img/index/menu_logo_hover.png"
        width="136"
      />
      
    </div>
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      <li
        class="t-menu__item t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          
          菜单内容
          
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Menu Menu singleSideVue demo works fine 1`] = `
<div
  class="box"
>
  <div
    class="t-default-menu t-menu--light"
    height="550px"
    style="height: 100%; width: 232px; margin-right: 40px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          class="t-menu__logo--center"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu t-menu--scroll narrow-scrollbar"
      >
        
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             仪表盘 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             资源列表 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             根目录 
            
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             调度平台 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             精准监控 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             消息区 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             个人中心 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             视频区 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             资源编辑 
            
          </span>
        </li>
        
      </ul>
      <!---->
    </div>
  </div>
  <div
    class="t-default-menu t-menu--light"
    height="550px"
    style="height: 100%; width: 232px; margin-right: 40px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          class="t-menu__logo--center"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu t-menu--scroll narrow-scrollbar"
      >
        
        <li
          class="t-menu__item t-is-active"
        >
          
          <svg
            class="t-icon t-icon-dashboard"
          >
            <use
              href="#t-icon-dashboard"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             仪表盘 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-server"
          >
            <use
              href="#t-icon-server"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源列表 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-root-list"
          >
            <use
              href="#t-icon-root-list"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             根目录 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-control-platform"
          >
            <use
              href="#t-icon-control-platform"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             调度平台 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-precise-monitor"
          >
            <use
              href="#t-icon-precise-monitor"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             精准监控 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-mail"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             消息区 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-user-circle"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             个人中心 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-play-circle"
          >
            <use
              href="#t-icon-play-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             视频区 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-edit-1"
          >
            <use
              href="#t-icon-edit-1"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源编辑 
            
          </span>
        </li>
        
      </ul>
      <!---->
    </div>
  </div>
  <div
    class="t-default-menu t-menu--dark"
    height="550px"
    style="height: 100%; width: 232px;"
  >
    <div
      class="t-default-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          class="t-menu__logo--center"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu t-menu--scroll narrow-scrollbar"
      >
        
        <li
          class="t-menu__item t-is-active"
        >
          
          <svg
            class="t-icon t-icon-dashboard"
          >
            <use
              href="#t-icon-dashboard"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             仪表盘 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-server"
          >
            <use
              href="#t-icon-server"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源列表 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-root-list"
          >
            <use
              href="#t-icon-root-list"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             根目录 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-control-platform"
          >
            <use
              href="#t-icon-control-platform"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             调度平台 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-precise-monitor"
          >
            <use
              href="#t-icon-precise-monitor"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             精准监控 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-mail"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             消息区 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-user-circle"
          >
            <use
              href="#t-icon-user-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             个人中心 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-play-circle"
          >
            <use
              href="#t-icon-play-circle"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             视频区 
            
          </span>
        </li>
        <li
          class="t-menu__item"
        >
          
          <svg
            class="t-icon t-icon-edit-1"
          >
            <use
              href="#t-icon-edit-1"
            />
          </svg>
          
          <span
            class="t-menu__content"
          >
            
             资源编辑 
            
          </span>
        </li>
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Menu Menu singleVue demo works fine 1`] = `
<div>
  <div
    class="t-menu t-head-menu t-menu--light"
    modelvalue="item2"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo_hover.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             菜单1 
            
          </span>
        </li>
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             菜单2 
            
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             禁用菜单 
            
          </span>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
  <br />
  <div
    class="t-menu t-head-menu t-menu--dark"
    height="120px"
    modelvalue="item1"
  >
    <div
      class="t-head-menu__inner"
    >
      <div
        class="t-menu__logo"
      >
        
        <img
          alt="logo"
          src="https://www.tencent.com/img/index/menu_logo.png"
          width="136"
        />
        
      </div>
      <ul
        class="t-menu"
      >
        
        <li
          class="t-menu__item t-is-active t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             菜单1 
            
          </span>
        </li>
        <li
          class="t-menu__item t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             菜单2 
            
          </span>
        </li>
        <li
          class="t-menu__item t-is-disabled t-menu__item--plain"
        >
          <!---->
          <span
            class="t-menu__content"
          >
            
             禁用菜单 
            
          </span>
        </li>
        
      </ul>
      <div
        class="t-menu__operations"
      >
        
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-search t-menu__operations-icon"
          >
            <use
              href="#t-icon-search"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-mail t-menu__operations-icon"
          >
            <use
              href="#t-icon-mail"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-user t-menu__operations-icon"
          >
            <use
              href="#t-icon-user"
            />
          </svg>
        </a>
        <a
          href="javascript:;"
        >
          <svg
            class="t-icon t-icon-ellipsis t-menu__operations-icon"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
        </a>
        
      </div>
    </div>
    <!---->
  </div>
</div>
`;
